# mechlogic

./: .gitignore  bevel_gear_test.py  bevel_gear_v2.py  generate_assembly.py  generate_bevel_submodel.py  generate_combined_selector.py  generate_mux_selector.py  generate_mux_with_housing.py  generate_print_layout.py  generate_selector_mechanism.py  pyproject.toml
docs/plans/: 2026-01-28-bevel-flexure-implementation.md  2026-01-28-bevel-gear-flexure-design.md  2026-01-28-mechanical-logic-compiler-design.md  2026-01-29-bevel-flexure-fix-design.md  2026-01-29-bevel-flexure-fix-implementation.md  2026-01-29-bevel-spacing-fix-design.md  2026-01-29-bevel-spacing-fix-implementation.md
examples/: mux_2to1.yaml
output/: assembly_manifest.json
output/assembly/: full_assembly.glb  full_assembly.stl
src/mechlogic/: __init__.py  cli.py
src/mechlogic/assembly/: __init__.py  builder.py  layout.py
tests/: __init__.py  test_assembly_integration.py  test_axle_no_intersections.py  test_bevel_gear.py  test_bevel_gear_meshing.py  test_bevel_lever_housing_no_intersections.py  test_combined_selector.py  test_flexure_block.py  test_gear_rack_teeth_position.py  test_housing.py  test_housing_no_intersections.py  test_kinematic.py  test_layout_bevel.py  test_lever_axle_alignment.py  test_lower_housing.py  test_motor_mount_no_intersections.py  test_mux_housing_integration.py  test_mux_upper_housing_integration.py  test_parallel_flexure.py  test_selector_mechanism.py  test_serpentine_flexure.py  test_shift_lever.py  test_spec_parsing.py  test_upper_housing.py
(+51 files in other folders)
